--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -4,13 +4,13 @@
   "login_et_user_password": "Introducir la contraseña",
   "login_btn_forgot_password": "¿Se te olvidó tu contraseña",
   "login_btn_sign_in": "Registrarse",
-  "login_error_fill_fields": "Por favor complete todos los campos e",
+  "login_error_fill_fields": "Por favor complete todos los campos",
   "login_end": "------------------------------------------------------------------------------------",
 
   "home_start": "Below are list of strings for home",
   "home_tv_posts": "ECO-TRIP",
   "home_tv_error": "Error",
   "home_tv_no_post_found": "No se han encontrado publicaciones",
-  "home_tv_choose_language": "Elige lengua",
+  "home_tv_choose_language": "Elija lenguaje",
   "home_end": "-------------------------------------------------------------------------------------"
 }
