--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -3,7 +3,7 @@
   "login_et_user_email": "Ingrese el correo electrónico del usuario",
   "login_et_user_password": "Introducir la contraseña",
   "login_btn_forgot_password": "¿Se te olvidó tu contraseña",
-  "login_btn_sign_in": "Registrarse",
+  "login_btn_sign_in": "CONFIRMAR",
   "login_error_fill_fields": "Por favor complete todos los campos",
   "login_end": "------------------------------------------------------------------------------------",
 
@@ -12,5 +12,7 @@
   "home_tv_error": "Error",
   "home_tv_no_post_found": "No se han encontrado publicaciones",
   "home_tv_choose_language": "Elija lenguaje",
-  "home_end": "-------------------------------------------------------------------------------------"
+  "home_end": "-------------------------------------------------------------------------------------",
+
+  "my_trips_title" : "Mis viajes"
 }
