subiendome a la scalonieta

--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -20,5 +20,6 @@
   "chats_title" : "Chats",
   "new_frecuent_title" : "Viajes frecuentes",
   "new_programmed_title" : "Viajes programados",
-  "join_frecuent_trip_title" : "Viajes frecuentes"
+  "join_frecuent_trip_title" : "Viajes frecuentes",
+  "trip_route" : "Recorrido del viaje"
 }
