--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -21,5 +21,6 @@
   "new_frecuent_title" : "Viajes frecuentes",
   "new_programmed_title" : "Viajes programados",
   "join_frecuent_trip_title" : "Viajes frecuentes",
+  "join_programmed_trip_title" : "Viajes programados",
   "trip_route" : "Recorrido del viaje"
 }
