--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -5,6 +5,7 @@
   "login_btn_forgot_password": "¿Se te olvidó tu contraseña",
   "login_btn_sign_in": "CONFIRMAR",
   "login_error_fill_fields": "Por favor complete todos los campos",
+  "login_register_link": "No tienes una cuenta? Registrate!",
   "login_end": "------------------------------------------------------------------------------------",
 
   "home_start": "Below are list of strings for home",
